Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35941

galera_bf_abort_lock_table fails with wait for metadata lock

    XMLWordPrintable

Details

    Description

      galera_bf_abort_lock_table fails with wait for metadata lock as if lock is not present and will not be created during wait period:

      CURRENT_TEST: galera.galera_bf_abort_lock_table
      --- /home/jenkins/workspace/Test-Package/mysql-test/suite/galera/r/galera_bf_abort_lock_table.result	2025-01-25 20:21:10.000000000 +0000
      +++ /home/jenkins/workspace/Test-Package/mysql-test/suite/galera/r/galera_bf_abort_lock_table.reject	2025-01-25 21:15:11.585318755 +0000
      @@ -7,11 +7,16 @@
       connection node_1;
       INSERT INTO t1 VALUES (2);
       connection node_2;
      +Timeout in wait_condition.inc for SELECT COUNT(*) = 1 FROM INFORMATION_SCHEMA.PROCESSLIST WHERE USER = 'system user' AND STATE = 'Waiting for table metadata lock'
      +Id	User	Host	db	Command	Time	State	Info	Progress
      +1	system user		NULL	Sleep	157	wsrep aborter idle	NULL	0.000
      +2	system user		NULL	Sleep	30	wsrep applier committed	NULL	0.000
      +205	root	localhost:54432	test	Query	0	starting	show full processlist	0.000
       UNLOCK TABLES;
       COMMIT;
       SELECT COUNT(*) = 1 FROM t1;
       COUNT(*) = 1
       1
       wsrep_local_aborts_increment
      -1
      +0
       DROP TABLE t1;
       
      Result length mismatch

      Attachments

        1. mtr-vardir.tar.gz
          2.36 MB
        2. 10.6-mysqld.1.err
          61 kB
        3. 10.6-mysqld.2.err
          20 kB
        4. 10.6-stdout.log
          2 kB
        5. 10.11-mysqld.1.err
          28 kB
        6. 10.11-stdout.log
          8 kB
        7. 10.11-mysqld.2.err
          25 kB
        8. screenshot-1.png
          screenshot-1.png
          220 kB

        Activity

          People

            janlindstrom Jan Lindström
            sysprg Julius Goryavsky (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.